--- a/config.php.sample
+++ b/config.php.sample
@@ -3,3 +3,4 @@ define("TWITTER_CONSUMER_KEY", "");
 define("TWITTER_CONSUMER_SECRET", "");
 define("OAUTH_TOKEN", "");
 define("OAUTH_SECRET", "");
+$keywords = ['hadoch'];
