--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "fennb/phirehose": "dev-master",
         "cboden/ratchet": "*",
-        "react/zmq": "*"
+        "react/zmq": "*",
+        "uzulla/slog": "*"
     },
     "autoload": {
         "psr-0": {"": "lib/"}
