外部からの制御を可能に
・閾値変更
・動的リデュース

--- a/config.php.sample
+++ b/config.php.sample
@@ -7,3 +7,4 @@ define("TWITTER_CONSUMER_SECRET", "");
 define("OAUTH_TOKEN", "");
 define("OAUTH_SECRET", "");
 $keywords = ['hadoch'];
+define("PASS", "adminpass");
